--- a/index.html
+++ b/index.html
@@ -78,8 +78,13 @@
 
 <div class="hindi">
     <div class="hindi1"><p>हिंदी में खोजें</p></div>
-    <div class="hindi2"><p>गूगल सर्च पेज</p></div>
+    <div class="hindi2">
+        <img class="pic8" src="srch.png" alt="Search"></img>
+        <p>गूगल सर्च पेज</p>
+        
+   </div>
 
+ <div class="questiondiv"><img class="question" src="question (1).png" alt="Search"></img></div>
 </div>
 
         <div class="about">
