--- a/index.html
+++ b/index.html
@@ -361,6 +361,14 @@
 </div>
 </section> -->     
 
+
+<section class="hide">
+    <div class="hide1">
+        More Search result
+        <img  class="hiddenarrow" src="down-arrow.png" alt="more"></img>
+    </div>
+
+  </section>
      
          <div class="endhidden">
 
