--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                      - Based on your passed activity
                     </a>
                     <a href="" class="endelement4">
-                     - Upadate location
+                     - Update location
                     </a>
                     </div>
                 </footer>  
